--- a/MONOCULAR_DEPTH_ESTIMATION.ipynb
+++ b/MONOCULAR_DEPTH_ESTIMATION.ipynb
@@ -19,6 +19,7 @@
         "# Monocular depth estimation\n",
         "\n",
         "**Author:** [Irlanki Leela Sai Abhiram](lirlanki.com)<br>"
+        "**Contributor:** [Sandip Paul](sandippaul@live.com)<br>"
       ]
     },
     {
